# TAAgent

./: .gitignore  Build.bat  Build.ps1  README.md  pyproject.toml
.codebuddy/agents/: TA Agent.md  TA-Agent.md
.codebuddy/knowledge/mcp-tools/: unreal-render-mcp.md
.codebuddy/rules/: skill-usage-guidelines.mdc
.codebuddy/skills/ue-bug-debugging/: SKILL.md
.codebuddy/skills/ue-niagara-workflow/: SKILL.md
.codebuddy/skills/ue-niagara-workflow/references/: common-modules.md  default-templates.md  engine-modules.md
.codebuddy/skills/ue-rendering-pipeline/references/: shadingmodel-comparison.md
agent/: __init__.py
docs/skills/lookdev/: skill.md
docs/skills/ue-development/: skill.md  tools-reference.md
mcps/unreal_render_mcp/: __init__.py  __main__.py  common.py  connection.py  server.py
mcps/unreal_render_mcp/tools/: __init__.py  actor.py  asset.py  editor.py  material.py  mesh.py  niagara.py  texture.py  viewport.py
output/: build_log.txt
plugins/unreal/UnrealMCP/RenderingMCP/Plugins/UnrealMCP/Source/UnrealMCP/Private/: EpicUnrealMCPBridge.cpp
plugins/unreal/UnrealMCP/RenderingMCP/Plugins/UnrealMCP/Source/UnrealMCP/Private/Commands/: EpicUnrealMCPBlueprintCommands.cpp  EpicUnrealMCPEditorCommands.cpp  EpicUnrealMCPEnvironmentCommands.cpp  EpicUnrealMCPMaterialCommands.cpp  EpicUnrealMCPNiagaraCommands.cpp
plugins/unreal/UnrealMCP/RenderingMCP/Plugins/UnrealMCP/Source/UnrealMCP/Public/: EpicUnrealMCPBridge.h
src/servers/unreal_render_mcp/: server.py
(+10 files in other folders)
