[project]
name = "ta-agent-workspace"
version = "2.0.0"
description = "TA Agent - AI-powered Technical Artist with MCP tools for rendering, material reconstruction, and performance optimization"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*", "mcps*", "src*"]
